# Lab3

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  README-hf.md  README.md  REPORT.md  app.py  mlflow.db  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
api/: main.py
cli/: main.py
logic/: __init__.py  image_processor.py
models/: class_labels.json  pet_classifier.onnx  pet_classifier.onnx.data
templates/: index.html
tests/: test_cli.py  test_fastapi_main.py  test_logic.py  test_models.py
training/: select_model.py  train.py
